oem-config (1.54.11) UNRELEASED; urgency=low

  * GTK frontend:
    - Use the full size of the underlying images for the timezone map if the
      screen is big enough.
    - Fix spacing on timezone page (LP: #336745).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 03 Apr 2009 13:56:14 +0100

oem-config (1.54.10) jaunty; urgency=low

  [ Colin Watson ]
  * Tighten frontend dependencies on oem-config to prevent problems when one
    architecture is out of sync.
  * Set passwd/auto-login=true rather than implementing auto-login ourselves
    (LP: #347900).
  * Suggest checkbox/checkbox-gtk rather than recommending
    hwtest/hwtest-gtk.
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup 1.28ubuntu7,
    user-setup 1.23ubuntu15.

  [ Evan Dandrea ]
  * Update the timezone_map to match changes in ubiquity (more accurate
    city placement).
  * Merge in the new KDE time zone map from ubiquity.  Thanks Roman
    Shtylman.

  [ Mario Limonciello ]
  * Change the number of columns in the language icon view to 5.  This 
    should make it fit in 1024x600. (LP: #347350)
  * Remove old hack in gtk frontend to only show scrollbars on language 
    selector when it would be larger than the desktop.  With the hack taken 
    out, the scrollbars aren't showing up on 800x576, which is likely the 
    lowest supportable resolution.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Mar 2009 16:31:14 +0100

oem-config (1.54.9) jaunty; urgency=low

  [ Evan Dandrea ]
  * Add missing errno import.
  * Merge in the new timezone widget from ubiquity (LP: #335557).
  * Fix 'resize if too big for screen' logic (LP: #341758).  Thanks Michael
    Terry!

  [ Colin Watson ]
  * GTK frontend:
    - Full-screen the window when --only is used - i.e. more or less always,
      except for testing. The extra screen real estate makes the timezone
      map, among other widgets, easier to use. (Ported from Evan Dandrea's